2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-07-04  Andreas Kupries  <andreask@activestate.com>

	* md5.man: Fixed creative writing problem reported by 
	* md5x.tcl: Julian Noble <juliannoble@users.sourceforge.net>,
	* pkgIndex.tcl: as [Bug 2010798]. Bumped version to 2.0.7.

2008-04-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5x.tcl: Clean up the MD5Hash_body once the proc defined.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* md5.man: Bumped version to 2.0.5
	* md5x.tcl:
	* pkgIndex.tcl:

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5x.test: Fixed usage of duplicate test names.

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5.test: More boilerplate simplified via use of test support.
	* md5x.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5.test: Hooked into the new common test support code.
	* md5x.test:

2005-10-24  Andreas Kupries <andreask@activestate.com>

	* md5v1.bench: New file. Basic benchmarks for MD5 hashes.
	* md5v2.bench:

2005-10-17  Andreas Kupries <andreask@activestate.com>

	* md5x.tcl: Trivial comment typo fix.

2005-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5x.tcl:     Performance fix for tcl8.5 integers.
